@@ -1,118 +1,130 @@
 /* Nama File    : ScheduleService.java
- * Deskripsi    : Layanan untuk mengelola dan mencari jadwal perjalanan
+ * Deskripsi    : Kelas layanan untuk manajemen jadwal
  * Tanggal      : 23 Maret 2026
  */
-
 package service;
 
 import model.Schedule;
+import exception.ScheduleConflictException;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-
-import exception.ScheduleConflictException;
+import java.util.stream.Collectors;
 
 /**
- * Kelas service untuk menyimpan master jadwal dan menyediakan operasi pencarian.
- * Semua fitur pencarian jadwal dipusatkan di sini (bukan di class model Schedule).
+ * Kelas layanan yang mengelola data master jadwal perjalanan kereta api.
  */
 public class ScheduleService {
-    /************ATRIBUT************/
-    // List ini berperan seperti tabel jadwal 
-    private List<Schedule> masterJadwal = new ArrayList<>();
+	/************ATRIBUT************/
+    private List<Schedule> masterJadwal;
 
-    /************METHOD************/
+	/************METHOD************/
+    // Membuat service jadwal dengan data master kosong.
+    public ScheduleService() {
+        this.masterJadwal = new ArrayList<>();
+    }
+
+    // Menambahkan jadwal baru jika tidak bentrok dengan jadwal kereta yang sama.
     public void addSchedule(Schedule s) throws ScheduleConflictException {
         if (s == null) {
-            throw new IllegalArgumentException("Schedule tidak boleh null");
+            throw new IllegalArgumentException("Jadwal tidak boleh null");
         }
-        if (s.getStationAsal() == null || s.getStationTujuan() == null || s.getTanggalBerangkat() == null) {
-            throw new IllegalArgumentException("Station asal/tujuan dan tanggal berangkat wajib diisi");
+
+        if (s.getTrain() == null || s.getDepartureTime() == null || s.getArrivalTime() == null) {
+            throw new IllegalArgumentException("Data jadwal belum lengkap");
         }
-        List<Schedule> existing = searchSchedule(
-                s.getStationAsal().getNamaStasiun(),
-                s.getStationTujuan().getNamaStasiun(),
-                s.getTanggalBerangkat());
-        if (!existing.isEmpty()) {
-            throw new ScheduleConflictException("Jadwal sudah terisi dengan keberangkatan kereta lain");
+
+        for (Schedule existing : masterJadwal) {
+            if (existing.getTrain().getIdTrain().equals(s.getTrain().getIdTrain())) {
+                if (s.getDepartureTime().isBefore(existing.getArrivalTime()) && 
+                    s.getArrivalTime().isAfter(existing.getDepartureTime())) {
+                    throw new ScheduleConflictException("Kereta " + s.getTrain().getNamaTrain() + " sudah memiliki jadwal di waktu tersebut!");
+                }
+            }
         }
-        masterJadwal.add(s);
+        this.masterJadwal.add(s);
     }
 
-    // --- IMPLEMENTASI METHOD OVERLOADING ---
-
-    // ======= Pindahan dari Schedule (skeleton) =======
+    // Mencari jadwal berdasarkan ID jadwal.
     public Schedule cariJadwalById(String idSchedule) {
-        if (idSchedule == null || idSchedule.isBlank()) {
-            throw new IllegalArgumentException("idSchedule tidak boleh kosong");
+        if (idSchedule == null || idSchedule.trim().isEmpty()) {
+            return null;
         }
-        assert !idSchedule.isBlank() : "idSchedule harus terisi";
-        // Skeleton method: boundary checks saja.
-        throw new UnsupportedOperationException("cariJadwalById belum diimplementasikan");
+
+        return masterJadwal.stream()
+                .filter(s -> s.getScheduleId().equals(idSchedule))
+                .findFirst()
+                .orElse(null);
     }
 
-    public Schedule cariJadwal(String kotaAsal, String kotaTujuan) {
-        if (kotaAsal == null || kotaAsal.isBlank() || kotaTujuan == null || kotaTujuan.isBlank()) {
-            throw new IllegalArgumentException("kotaAsal dan kotaTujuan tidak boleh kosong");
+    // Mencari jadwal berdasarkan kota asal dan kota tujuan.
+    public List<Schedule> cariJadwal(String kotaAsal, String kotaTujuan) {
+        if (kotaAsal == null || kotaTujuan == null) {
+            return new ArrayList<>();
         }
-        assert !kotaAsal.isBlank() && !kotaTujuan.isBlank() : "kotaAsal/kotaTujuan harus terisi";
-        // Skeleton method: boundary checks saja.
-        throw new UnsupportedOperationException("cariJadwal belum diimplementasikan");
+
+        return masterJadwal.stream()
+                .filter(s -> s.getDepartureStasion().getKota().equalsIgnoreCase(kotaAsal) &&
+                             s.getArrivalStasion().getKota().equalsIgnoreCase(kotaTujuan))
+                .collect(Collectors.toList());
     }
 
-    public Schedule cariJadwal(String kotaAsal, String kotaTujuan, LocalDate tanggalBerangkat) {
-        if (kotaAsal == null || kotaAsal.isBlank() || kotaTujuan == null || kotaTujuan.isBlank() || tanggalBerangkat == null) {
-            throw new IllegalArgumentException("kotaAsal, kotaTujuan, dan tanggalBerangkat wajib diisi");
+    // Mencari jadwal berdasarkan kota asal, kota tujuan, dan tanggal berangkat.
+    public List<Schedule> cariJadwal(String kotaAsal, String kotaTujuan, LocalDate tanggalBerangkat) {
+        if (kotaAsal == null || kotaTujuan == null || tanggalBerangkat == null) {
+            return new ArrayList<>();
         }
-        assert tanggalBerangkat != null : "tanggalBerangkat wajib diisi";
-        // Skeleton method: boundary checks saja.
-        throw new UnsupportedOperationException("cariJadwal belum diimplementasikan");
+
+        return masterJadwal.stream()
+                .filter(s -> s.getDepartureStasion().getKota().equalsIgnoreCase(kotaAsal) &&
+                             s.getArrivalStasion().getKota().equalsIgnoreCase(kotaTujuan) &&
+                             s.getDepartureTime().toLocalDate().equals(tanggalBerangkat))
+                .collect(Collectors.toList());
     }
 
-    // Cari berdasarkan stasiun tujuan saja
+    // Mencari jadwal berdasarkan kota atau nama stasiun tujuan.
     public List<Schedule> searchSchedule(String tujuan) {
-        if (tujuan == null || tujuan.isBlank()) {
-            throw new IllegalArgumentException("Tujuan tidak boleh kosong");
+        if (tujuan == null) {
+            return new ArrayList<>();
         }
-        List<Schedule> hasil = new ArrayList<>();
-        for (Schedule s : masterJadwal) {
-            if (s.getStationTujuan() != null && s.getStationTujuan().getNamaStasiun().equalsIgnoreCase(tujuan)) {
-                hasil.add(s);
-            }
-        }
-        return hasil;
+
+        return masterJadwal.stream()
+                .filter(s -> s.getArrivalStasion().getKota().equalsIgnoreCase(tujuan) ||
+                             s.getArrivalStasion().getNamaStasion().equalsIgnoreCase(tujuan))
+                .collect(Collectors.toList());
     }
 
-    // Cari berdasarkan asal DAN tujuan (Overloading)
+    // Mencari jadwal berdasarkan asal dan tujuan (kota atau nama stasiun).
     public List<Schedule> searchSchedule(String asal, String tujuan) {
-        if (asal == null || asal.isBlank() || tujuan == null || tujuan.isBlank()) {
-            throw new IllegalArgumentException("Asal dan tujuan tidak boleh kosong");
+        if (asal == null || tujuan == null) {
+            return new ArrayList<>();
         }
-        List<Schedule> hasil = new ArrayList<>();
-        for (Schedule s : masterJadwal) {
-            if (s.getStationAsal() != null && s.getStationTujuan() != null
-                    && s.getStationAsal().getNamaStasiun().equalsIgnoreCase(asal)
-                    && s.getStationTujuan().getNamaStasiun().equalsIgnoreCase(tujuan)) {
-                hasil.add(s);
-            }
-        }
-        return hasil;
+
+        return masterJadwal.stream()
+                .filter(s -> (s.getDepartureStasion().getKota().equalsIgnoreCase(asal) ||
+                              s.getDepartureStasion().getNamaStasion().equalsIgnoreCase(asal)) &&
+                             (s.getArrivalStasion().getKota().equalsIgnoreCase(tujuan) ||
+                              s.getArrivalStasion().getNamaStasion().equalsIgnoreCase(tujuan)))
+                .collect(Collectors.toList());
     }
 
-    // Cari berdasarkan asal, tujuan, dan tanggal (Overloading)
-    public List<Schedule> searchSchedule(String asal, String tujuan, java.time.LocalDate tanggalBerangkat) {
-        if (asal == null || asal.isBlank() || tujuan == null || tujuan.isBlank() || tanggalBerangkat == null) {
-            throw new IllegalArgumentException("Asal, tujuan, dan tanggal berangkat wajib diisi");
+    // Mencari jadwal berdasarkan asal, tujuan, dan tanggal berangkat.
+    public List<Schedule> searchSchedule(String asal, String tujuan, LocalDate tanggalBerangkat) {
+        if (asal == null || tujuan == null || tanggalBerangkat == null) {
+            return new ArrayList<>();
         }
-        List<Schedule> hasil = new ArrayList<>();
-        for (Schedule s : masterJadwal) {
-            if (s.getStationAsal() != null && s.getStationTujuan() != null && s.getTanggalBerangkat() != null
-                    && s.getStationAsal().getNamaStasiun().equalsIgnoreCase(asal)
-                    && s.getStationTujuan().getNamaStasiun().equalsIgnoreCase(tujuan)
-                    && s.getTanggalBerangkat().equals(tanggalBerangkat)) {
-                hasil.add(s);
-            }
-        }
-        return hasil;
+
+        return masterJadwal.stream()
+                .filter(s -> (s.getDepartureStasion().getKota().equalsIgnoreCase(asal) ||
+                              s.getDepartureStasion().getNamaStasion().equalsIgnoreCase(asal)) &&
+                             (s.getArrivalStasion().getKota().equalsIgnoreCase(tujuan) ||
+                              s.getArrivalStasion().getNamaStasion().equalsIgnoreCase(tujuan)) &&
+                             s.getDepartureTime().toLocalDate().equals(tanggalBerangkat))
+                .collect(Collectors.toList());
+    }
+
+    // Mengambil salinan daftar master jadwal agar data internal tetap aman.
+    public List<Schedule> getMasterJadwal() {
+        return new ArrayList<>(masterJadwal);
     }
 }
